added gif dance party

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	})(window,document,'script','dataLayer','GTM-PXCWVZ');</script>
 	<!-- End Google Tag Manager -->
 	<section id="welcome">
-		<header class="close">
+		<!-- <header class="close">
 			<nav>
 				<div class="relative">
 					<div class="holder">
@@ -56,7 +56,7 @@
 				<div class="toggle-bar">
 				</div>
 			</div>
-		</header>
+		</header> -->
 		<div class="welcome">
 			<i class="logo fade-in one"></i>
 			<h1 class="fade-in two">Hello <strong>World</strong></h1>
@@ -84,14 +84,27 @@
 					<li><a href="#experience">Experience</a></li>
 				</ul>
 				<div class="tab">
-					<aside class="bio tab-content scrollflow -slide-right -opacity" id="bio">
+					<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
 						<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
 						<div class="links scrollflow"><a href="https://drive.google.com/open?id=0B9BDSYdQ3pr8S3F1NEhHd0lzeG8" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
-							<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a></div>
+							<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
+						</div>
+					</div>
 						</aside>
 						<aside class="skills tab-content main"  id="skills">
 							<div class="wrapper">
-								<h1> Under construction</h1>
+								<h1> This section is currently under construction. Please enjoy this gif party while you wait</h1>
+								<div class="container gif_party">
+								<img src="http://gifdanceparty.giphy.com/dancers/pumpgirl.gif">
+								<img src="https://cdn.discourse.org/turtlerock/uploads/default/original/3X/7/9/795656c869bf977ed160ec6ce2f598695a8cf6f3.gif">
+								<img src="https://49.media.tumblr.com/4a6589166bc392bf955f6dc8f92d3ac1/tumblr_nztpv1q1ua1tp5dmdo1_400.gif">
+								<!-- <img src="http://static.fjcdn.com/gifs/Dance+party+https+wwwyoutubecom+watch+v+2hqabwziyvy_5d4902_5417951.gif"> -->
+								<img src="http://i.giphy.com/mf1KcWoiyAcNO.gif">
+								<img src="http://paulalalalalalalalalalalalalalalalalalalalalalalalalalalalalala.land/images/giphy.gif">
+								<img src="https://66.media.tumblr.com/504cb94fe0f41e563f435ee2f833dcb5/tumblr_n47d7f7uFv1rt5pgzo1_400.gif">
+								<!-- <img src="https://m.popkey.co/1d6426/Wp00d.gif"> -->
+							</div>
+						</br>
 								<ul class="ch-grid">
 									<li>
 										<div class="ch-item html">
@@ -365,6 +378,7 @@
 									</li>
 								</ul>
 							</div>
+						</div>
 						</aside>
 						<aside class="experience tab-content"  id="experience">
 							<div class="row">
@@ -381,8 +395,8 @@
 								<li>Create graphics and designs for social media platforms and presentations.</li>
 								<li>Maintain the company’s website; adding features to increase online engagement.</li>
 							</div>
-						</div>
-						<div class="row">
+			  			</div>
+					  	<div class="row">
 							<img src="images/geico-logo.jpg"></img>
 							<div class="brief">
 								<span class="position">Marketing Buyer – Events,   October 2012 – February 2015</span>
@@ -393,7 +407,7 @@
 								<li>Managed focus tours to saturate markets with a specified call to action per location.</li>
 								<li>Researched, planned and implemented new social media strategies to increase impressions of events and brand.</li>
 								<li>Member of the GEICO Blog team. Writing about events, marketing and topics that can be related to GEICO.</li>
-								<li>Continued Event Marketing Coordinator responsibilities, excluding regional event coordination, in addition to new duties.</li>
+								<li>Continued Event Marketing Coordinator responsibilities, excluding regional event coordination, in addition to new duties.</li></br>
 								<span class="position">Marketing Coordinator – Events, September 2008 – October 2012</span>
 								<li>Lead 20+ Regional Event Marketing Coordinators. Responsibilities included supporting teams with equipment, promotional products, event approval and event payment processing.</li>
 								<li>Created and maintained lead analysis program to measure ROI of events. The key learning from analysis were used in planning and evaluation of marketing strategies and programs.</li>
