Added buttons to port popup

--- a/index.html
+++ b/index.html
@@ -483,9 +483,9 @@
 				<div class="title scrollflow -slide-top -opacity"><h2>Portfolio</h2></div>
 				<div id='app-container'>
 					<div class="toggles">
-						<button class='button fade-in four' id='showall'>Show All</button>
-						<button class='button fade-in four' id='web'>Web Development</button>
-						<button class='button fade-in four' id='marketing'>Marketing</button>
+						<button class="button fade-in four" id='showall'>Show All</button>
+						<button class="button fade-in four"id="web">Web Development</button>
+						<button class="button fade-in four" id='marketing'>Marketing</button>
 						<!-- <button class='button fade-in four' id='graphic'>Graphic Design</button>
 						<button class='button fade-in four' id='social'>Social Media</button> -->
 					</div>
@@ -503,8 +503,8 @@
 									<p> A trivia game written in vanilla <strong>javascript</strong>.</p>
 									<p> This was our first WDI project. We had a topic to choose from and were restricted from using jQuery. I chose Trivia because it was a fun game that I personally enjoy.</p>
 									<p>I have already made some updates since the project was completed but still would like to add a scoreboard and more dynanic notifiers when you get the questions correct or wrong.</p>
-									<button class='fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
-									<button class='fade-in four'><a href="http://lafrish.github.io/Trivia_Night/">Link to Trivia</a></button>
+									<button class="button fade-in four"><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
+									<button class="button fade-in four"><a href="http://lafrish.github.io/Trivia_Night/">Link to Trivia</a></button>
 								</div>
 							</div>
 						</div>
@@ -522,8 +522,8 @@
 									<h6>Cheerie</h6>
 									<p> Do you ever feel down in the dumps and need a quick cheer me up? Well then, Cheerie is the app for you. This delightful application was my second project for WDI. It is written in <strong> Ruby on Rails</strong></p>
 									<p> I chose this subject matter because I personally go to looks at gifs to cheer myself up and wanted to share this system to others to assist in turning their frowns upside down. </p>
-									<button class='fade-in four'><a href="https://github.com/LaFrish/Cheerie">Github</a></button>
-									<button class='fade-in four'><a href="http://cheerie.herokuapp.com/">Link to Cheerie</a></button>
+									<button class="button fade-in four"><a href="https://github.com/LaFrish/Cheerie">Github</a></button>
+									<button class="button fade-in four"><a href="http://cheerie.herokuapp.com/">Link to Cheerie</a></button>
 								</div>
 							</div>
 						</div>
@@ -541,8 +541,8 @@
 									<h6>iCare</h6>
 									<p> iCare is a web application that assists residents in the DC Metro area find volunteer events and share volunteer stories. iCare was created with a <strong>Ruby on Rails backend and AngularJS Frontend</strong>.</p>
 									<p>This was a group project created by Alexa Klien, Brittany Branson and I. My contribtion to the project was the event portion of the site.</p>
-									<button class='fade-in four'><a href="https://github.com/aklein916/iCare-Volunteer-Project">Github</a></button>
-									<button class='fade-in four'><a href="https://icare-volunteer-app.herokuapp.com/">Link to iCare</a></button>
+									<button class="button fade-in four"><a href="https://github.com/aklein916/iCare-Volunteer-Project">Github</a></button>
+									<button class="button fade-in four"><a href="https://icare-volunteer-app.herokuapp.com/">Link to iCare</a></button>
 								</div>
 							</div>
 						</div>
@@ -560,8 +560,8 @@
 									<h6>Node Beach House</h6>
 									<p> Node Vodka is the latest and greatest vodka line that is launching this summer. To celebrate their inaugrial year, they are hosting lucky winners at their Node Beach House. The Node Beach House is the latest experiential marketing campaigns from XYZ Marketing and this  website it the accompanying microsite for the tour. Extending the reach of the event long after the tour ends. There is a sweepstakes submission page to generate lead data, a photo pick up site that can be shared socially fully branded with Node's logo and mixologist section to show the many ways you are able to enjoy the vodka of the summer. And if you can't make it to the beach house, you can live vicariously through the experience by listening to Node Radio.</p>
 									<p> For our fourth and final project, I took my past experience in marketing with a developer twist. With the opportunity to use any language of our choise, I made this as a <strong>MEAN application</strong>.</p>
-									<button class='fade-in four'><a href="https://github.com/LaFrish/beachhouse">Github</a></button>
-									<button class='fade-in four'><a href="">Link to Node House</a></button>
+									<button class="button fade-in four"><a href="https://github.com/LaFrish/beachhouse">Github</a></button>
+									<button class="button fade-in four"><a href="">Link to Node House</a></button>
 								</div>
 							</div>
 						</div>
@@ -579,8 +579,8 @@
 									<h6>GEICO Bus Tour</h6>
 									<p> My last major program at GEICO was a true labor of love. Being the lead of the project from conception to when it ended it's first season on tour. This acclaimed tour was so successful that GEICO ordered a second bus tour to be on the road the next tour season. Working hand in hand with RedPeg Marketing, we created a truly interactive experience.</p>
 									<p>On entrance, we collected consumer data through a gas card giveway that they entered at our tabletop kiosks, then had a  photo opportunity using our GEICO overlays w specialized characters, were entertained by our EMCEE on stage while they waited to enter the bus. Once on the GEICO bus, the consumer played GEICO pinball while waiting for their turn to sing and dance with the gecko in GEICO Karaoke. A full fan experience at the largest events on the East Coast.</p>
-									<button><a href="https://drive.google.com/file/d/0B287eiUVjLsLdk8xMExWLUpMNlE/view?usp=sharing">GEICO Bus Tour Summary</a></button>
-									<button><a href="http://www.eventmarketer.com/article/geico-takes-summer-tour-trio-mascots/">Article</a></button>
+									<button class="button fade-in four"><a href="https://drive.google.com/file/d/0B287eiUVjLsLdk8xMExWLUpMNlE/view?usp=sharing">GEICO Bus Tour Summary</a></button>
+									<button class="button fade-in four"><a href="http://www.eventmarketer.com/article/geico-takes-summer-tour-trio-mascots/">Article</a></button>
 								</div>
 							</div>
 						</div>
