commiting css for port popup before I go home

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</ul>
 				<div class="tab">
 					<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
-						<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
+						<p>Hello, my name is  Farishta Haider. I am  <strong>Full-Stack Developer</strong> with a strong background in Marketing. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
 						<div class="links scrollflow"><a href="https://drive.google.com/open?id=0B9BDSYdQ3pr8S3F1NEhHd0lzeG8" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
 							<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
 						</div>
@@ -138,7 +138,7 @@
 									</li>
 									<li>
 										<div class="ch-item javascript">
-											<h4>Javascript</h4>
+											<h4>JavaScript</h4>
 											<i class="devicon-javascript-plain"></i>
 											<div class="ch-info-wrap">
 												<div class="ch-info">
@@ -500,9 +500,9 @@
 								<div class="pop1">
 									<span1>✖</span1>
 									<h6>Trivia Night</h6>
-									<p> A trivia game written in vanilla <strong>javascript</strong>.</p>
-									<p> This was our first WDI project. We had a topic to choose from and were restricted from using jQuery. I chose Trivia because it was a fun game that I personally enjoy.</p>
-									<p>I have already made some updates since the project was completed but still would like to add a scoreboard and more dynanic notifiers when you get the questions correct or wrong.</p>
+									<p1> A trivia game written in Vanilla <strong>JavaScript</strong>.</p1></br>
+									<p1> This was our first WDI project. We had a topic to choose from and were restricted from using jQuery. I chose Trivia because it was a fun game that I personally enjoy.</p1></br>
+									<p1>I have already made some updates since the project was completed but still would like to add a scoreboard and more dynanic notifiers when you get the questions correct or wrong.</p1></br>
 									<button class="button fade-in four"><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
 									<button class="button fade-in four"><a href="http://lafrish.github.io/Trivia_Night/">Link to Trivia</a></button>
 								</div>
@@ -520,8 +520,8 @@
 								<div class="pop2">
 									<span2>✖</span2>
 									<h6>Cheerie</h6>
-									<p> Do you ever feel down in the dumps and need a quick cheer me up? Well then, Cheerie is the app for you. This delightful application was my second project for WDI. It is written in <strong> Ruby on Rails</strong></p>
-									<p> I chose this subject matter because I personally go to looks at gifs to cheer myself up and wanted to share this system to others to assist in turning their frowns upside down. </p>
+									<p1> Do you ever feel down in the dumps and need a quick cheer me up? Well then, Cheerie is the app for you. This delightful application was my second project for WDI. It is written in <strong> Ruby on Rails</strong></p1></br>
+									<p1> I chose this subject matter because I personally go to looks at gifs to cheer myself up and wanted to share this system to others to assist in turning their frowns upside down. </p1></br>
 									<button class="button fade-in four"><a href="https://github.com/LaFrish/Cheerie">Github</a></button>
 									<button class="button fade-in four"><a href="http://cheerie.herokuapp.com/">Link to Cheerie</a></button>
 								</div>
@@ -539,8 +539,8 @@
 								<div class="pop3">
 									<span3>✖</span3>
 									<h6>iCare</h6>
-									<p> iCare is a web application that assists residents in the DC Metro area find volunteer events and share volunteer stories. iCare was created with a <strong>Ruby on Rails backend and AngularJS Frontend</strong>.</p>
-									<p>This was a group project created by Alexa Klien, Brittany Branson and I. My contribtion to the project was the event portion of the site.</p>
+									<p1> iCare is a web application that assists residents in the DC Metro area find volunteer events and share volunteer stories. iCare was created with a <strong>Ruby on Rails backend and AngularJS Frontend</strong>.</p1></br>
+									<p1>This was a group project created by Alexa Klien, Brittany Branson and I. My contribtion to the project was the event portion of the site.</p1></br>
 									<button class="button fade-in four"><a href="https://github.com/aklein916/iCare-Volunteer-Project">Github</a></button>
 									<button class="button fade-in four"><a href="https://icare-volunteer-app.herokuapp.com/">Link to iCare</a></button>
 								</div>
@@ -558,8 +558,8 @@
 								<div class="pop4">
 									<span4>✖</span4>
 									<h6>Node Beach House</h6>
-									<p> Node Vodka is the latest and greatest vodka line that is launching this summer. To celebrate their inaugrial year, they are hosting lucky winners at their Node Beach House. The Node Beach House is the latest experiential marketing campaigns from XYZ Marketing and this  website it the accompanying microsite for the tour. Extending the reach of the event long after the tour ends. There is a sweepstakes submission page to generate lead data, a photo pick up site that can be shared socially fully branded with Node's logo and mixologist section to show the many ways you are able to enjoy the vodka of the summer. And if you can't make it to the beach house, you can live vicariously through the experience by listening to Node Radio.</p>
-									<p> For our fourth and final project, I took my past experience in marketing with a developer twist. With the opportunity to use any language of our choise, I made this as a <strong>MEAN application</strong>.</p>
+									<p1> Node Vodka is the latest and greatest vodka line that is launching this summer. To celebrate their inaugrial year, they are hosting lucky winners at their Node Beach House. The Node Beach House is the latest experiential marketing campaigns from XYZ Marketing and this  website it the accompanying microsite for the tour. Extending the reach of the event long after the tour ends. There is a sweepstakes submission page to generate lead data, a photo pick up site that can be shared socially fully branded with Node's logo and mixologist section to show the many ways you are able to enjoy the vodka of the summer. And if you can't make it to the beach house, you can live vicariously through the experience by listening to Node Radio.</p1></br>
+									<p1> For our fourth and final project, I took my past experience in marketing with a developer twist. With the opportunity to use any language of our choise, I made this as a <strong>MEAN application</strong>.</p1></br>
 									<button class="button fade-in four"><a href="https://github.com/LaFrish/beachhouse">Github</a></button>
 									<button class="button fade-in four"><a href="">Link to Node House</a></button>
 								</div>
@@ -577,8 +577,8 @@
 								<div class="pop5">
 									<span5>✖</span5>
 									<h6>GEICO Bus Tour</h6>
-									<p> My last major program at GEICO was a true labor of love. Being the lead of the project from conception to when it ended it's first season on tour. This acclaimed tour was so successful that GEICO ordered a second bus tour to be on the road the next tour season. Working hand in hand with RedPeg Marketing, we created a truly interactive experience.</p>
-									<p>On entrance, we collected consumer data through a gas card giveway that they entered at our tabletop kiosks, then had a  photo opportunity using our GEICO overlays w specialized characters, were entertained by our EMCEE on stage while they waited to enter the bus. Once on the GEICO bus, the consumer played GEICO pinball while waiting for their turn to sing and dance with the gecko in GEICO Karaoke. A full fan experience at the largest events on the East Coast.</p>
+									<p1> My last major program at GEICO was a true labor of love. Being the lead of the project from conception to when it ended it's first season on tour. This acclaimed tour was so successful that GEICO ordered a second bus tour to be on the road the next tour season. Working hand in hand with RedPeg Marketing, we created a truly interactive experience.</p1></br>
+									<p1>On entrance, we collected consumer data through a gas card giveway that they entered at our tabletop kiosks, then had a  photo opportunity using our GEICO overlays with specialized characters, were entertained by our EMCEE on stage while they waited to enter the bus. Once on the GEICO bus, the consumer played GEICO pinball while waiting for their turn to sing and dance with the gecko in GEICO Karaoke. A full fan experience at the largest events on the East Coast.</p1></br>
 									<button class="button fade-in four"><a href="https://drive.google.com/file/d/0B287eiUVjLsLdk8xMExWLUpMNlE/view?usp=sharing">GEICO Bus Tour Summary</a></button>
 									<button class="button fade-in four"><a href="http://www.eventmarketer.com/article/geico-takes-summer-tour-trio-mascots/">Article</a></button>
 								</div>
