--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 				</ul>
 				<div class="tab">
 					<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
-						<p>Hello, my name is  Farishta Haider. I am  <strong>Full-Stack Developer</strong> with a strong background in Marketing. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
+						<p>Hello, my name is  Farishta Haider.</br>
+							 A <strong>Full-Stack Developer</strong> with a strong background in Marketing. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
 						<div class="links scrollflow"><a href="https://drive.google.com/open?id=0B9BDSYdQ3pr8S3F1NEhHd0lzeG8" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
 							<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
 						</div>
