--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 				<li class="current"><a href="#bio">Bio</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#experience">Experience</a></li>
+				<li><a href="#education">Education</a></li>
 			</ul>
 			<div class="tab">
 				<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
@@ -94,18 +95,18 @@
 				</aside>
 				<aside class="skills tab-content main"  id="skills">
 					<div class="wrapper">
-						<h1> This section is currently under construction. Please enjoy this gif party while you wait</h1>
+						<!-- <h1> This section is currently under construction. Please enjoy this gif party while you wait</h1>
 						<div class="container gif_party">
 							<img src="http://gifdanceparty.giphy.com/dancers/pumpgirl.gif">
 							<img src="https://cdn.discourse.org/turtlerock/uploads/default/original/3X/7/9/795656c869bf977ed160ec6ce2f598695a8cf6f3.gif">
 							<img src="https://49.media.tumblr.com/4a6589166bc392bf955f6dc8f92d3ac1/tumblr_nztpv1q1ua1tp5dmdo1_400.gif">
-							<!-- <img src="http://static.fjcdn.com/gifs/Dance+party+https+wwwyoutubecom+watch+v+2hqabwziyvy_5d4902_5417951.gif"> -->
+							<img src="http://static.fjcdn.com/gifs/Dance+party+https+wwwyoutubecom+watch+v+2hqabwziyvy_5d4902_5417951.gif">
 							<img src="http://i.giphy.com/mf1KcWoiyAcNO.gif">
 							<img src="http://paulalalalalalalalalalalalalalalalalalalalalalalalalalalalalala.land/images/giphy.gif">
 							<img src="https://66.media.tumblr.com/504cb94fe0f41e563f435ee2f833dcb5/tumblr_n47d7f7uFv1rt5pgzo1_400.gif">
-							<!-- <img src="https://m.popkey.co/1d6426/Wp00d.gif"> -->
+							<img src="https://m.popkey.co/1d6426/Wp00d.gif">
 						</div>
-					</br>
+					</br> -->
 					<ul class="ch-grid">
 						<li>
 							<div class="ch-item html">
@@ -193,8 +194,6 @@
 										<div class="ch-info-front angular"></div>
 										<h3>Bears Type</h3>
 										<div class="ch-info-back">
-
-											<p>by Josh Schott <a href="http://drbl.in/ewUW">View on Dribbble</a></p>
 										</div>
 									</div>
 								</div>
@@ -432,8 +431,28 @@
 			</div>
 		</div>
 	</aside>
-</div>
-</div>
+	<aside class="experience tab-content">
+		<div class="row">
+			<img src="images/university-of-maryland-logo.png">
+			<div class="brief">
+			<h1> Univeristy of Maryland</h1>
+			<h2> College Park, Maryland </h2>
+			<p> Communications</p>
+			<p> Bachelors of Arts & Humanities</p>
+			<p> Graduated May 2004</p>
+		</div>
+	</div>
+		<div class="row">
+			<img src="images/generalassembly-open-graph.png">
+			<div class="brief">
+			<h1>General Assembly</h1>
+			<h2>Washington, D.C.</h2>
+			<h3> Web Development Immersive</h3>
+			<p> Cohort 8</p>
+			<p> February 2016 - April 2016</p>
+		</div>
+	</div>
+	</aside>
 </div>
 </section>
 <section id="portfolio">
@@ -517,9 +536,11 @@
 								<h6>Cheerie</h6>
 								<p1> Do you ever feel down in the dumps and need a quick cheer me up? Well then, Cheerie is the app for you. This delightful application was my second project for WDI. It is written in <strong> Ruby on Rails</strong></p1></br>
 								<p1> I chose this subject matter because I personally go to looks at gifs to cheer myself up and wanted to share this system to others to assist in turning their frowns upside down. </p1></br>
+								<div class="btn_container">
 								<button class="button fade-in four"><a href="https://github.com/LaFrish/Cheerie"><i class="fa fa-github"> Github Repo</i></a></button>
 								<button class="button fade-in four"><a href="http://cheerie.herokuapp.com/"><i class="fa fa-globe"> Cheerie Site</i></a></button>
 							</div>
+						</div>
 						</div>
 					</div>
 				</div>
@@ -536,8 +557,10 @@
 								<h6>iCare</h6>
 								<p1> iCare is a web application that assists residents in the DC Metro area find volunteer events and share volunteer stories. iCare was created with a <strong>Ruby on Rails backend and AngularJS Frontend</strong>.</p1></br>
 								<p1>This was a group project created by Alexa Klien, Brittany Branson and I. My contribtion to the project was the event portion of the site.</p1></br>
+								<div class="btn_container">
 								<button class="button fade-in four"><a href="https://github.com/aklein916/iCare-Volunteer-Project"><i class="fa fa-github"> Github Repo</i></a></button>
 								<button class="button fade-in four"><a href="https://icare-volunteer-app.herokuapp.com/"><i class="fa fa-globe">iCare Site</i></a></button>
+							</div>
 							</div>
 						</div>
 					</div>
@@ -555,8 +578,10 @@
 								<h6>Node Beach House</h6>
 								<p1> Node Vodka is the latest and greatest vodka line that is launching this summer. To celebrate their inaugrial year, they are hosting lucky winners at their Node Beach House. The Node Beach House is the latest experiential marketing campaigns from XYZ Marketing and this  website it the accompanying microsite for the tour. Extending the reach of the event long after the tour ends. There is a sweepstakes submission page to generate lead data, a photo pick up site that can be shared socially fully branded with Node's logo and mixologist section to show the many ways you are able to enjoy the vodka of the summer. And if you can't make it to the beach house, you can live vicariously through the experience by listening to Node Radio.</p1></br>
 								<p1> For our fourth and final project, I took my past experience in marketing with a developer twist. With the opportunity to use any language of our choise, I made this as a <strong>MEAN app</strong>.</p1></br>
+								<div class="btn_container">
 								<button class="button fade-in four"><a href="https://github.com/LaFrish/beachhouse"><i class="fa fa-github"> Github Repo</i></a></button>
 								<button class="button fade-in four"><a href=""><i class="fa fa-globe">Node Beachhouse</i></a></button>
+							</div>
 							</div>
 						</div>
 					</div>
@@ -574,8 +599,10 @@
 								<h6>GEICO Bus Tour</h6>
 								<p1> My last major program at GEICO was a true labor of love. Being the lead of the project from conception to when it ended it's first season on tour. This acclaimed tour was so successful that GEICO ordered a second bus tour to be on the road the next tour season. Working hand in hand with RedPeg Marketing, we created a truly interactive experience.</p1></br>
 								<p1>On entrance, we collected consumer data through a gas card giveway that they entered at our tabletop kiosks, then had a  photo opportunity using our GEICO overlays with specialized characters, were entertained by our EMCEE on stage while they waited to enter the bus. Once on the GEICO bus, the consumer played GEICO pinball while waiting for their turn to sing and dance with the gecko in GEICO Karaoke. A full fan experience at the largest events on the East Coast.</p1></br>
+								<div class="btn_container">
 								<button class="button fade-in four"><a href="https://drive.google.com/file/d/0B287eiUVjLsLdk8xMExWLUpMNlE/view?usp=sharing"><i class="fa fa-file-powerpoint-o"> GEICO Bus Tour Summary</i></a></button>
 								<button class="button fade-in four"><a href="http://www.eventmarketer.com/article/geico-takes-summer-tour-trio-mascots/"><i class="fa fa-file-o"> Bus Article</i></a></button>
+							</div>
 							</div>
 						</div>
 					</div>
