working on font-face

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="stylesheets/animate.css">
+	<link rel="stylesheet" href="fonts/Audrey-Normal.css">
 	<link rel="stylesheet" href="devicon-master/devicon.min.css">
 	<link rel="stylesheet" href="devicon-master/devicon-colors.css">
 	<link rel="stylesheet" href="bitIcon/style.css">
@@ -14,10 +15,12 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
 
+	<link href='https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display:400,700,700italic,900italic,900,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/common.css" />
 	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/style.css" />
 	<script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
 	<script type="text/javascript" src="http://tympanus.net/Tutorials/CircleHoverEffects/js/modernizr.custom.79639.js"></script>
+	<script type="text/javascript" src="fonts/fontsmoothie.min.js" async></script>
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
