--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<li class="current"><a href="#bio">Bio</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#experience">Experience</a></li>
-				<li><a href="#education">Education</a></li>
+				<!-- <li><a href="#education">Education</a></li> -->
 			</ul>
 			<div class="tab">
 				<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
