--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Farishta Haider</title>
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
-	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css">
+	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css/scss">
 	<link rel="stylesheet" href="stylesheets/animate.css">
 	<link rel="stylesheet" href="fonts/Audrey-Normal.css">
 	<link rel="stylesheet" href="devicon-master/devicon.min.css">
@@ -14,11 +14,12 @@
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
-
 	<link href='https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display:400,700,700italic,900italic,900,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/common.css" />
 	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/style.css" />
-	<script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+	<script type="text/javascript" src="javascripts/modernizr.custom.79639.js"></script>
 	<script type="text/javascript" src="http://tympanus.net/Tutorials/CircleHoverEffects/js/modernizr.custom.79639.js"></script>
 	<script type="text/javascript" src="fonts/fontsmoothie.min.js" async></script>
 	<script>
@@ -43,23 +44,29 @@
 	})(window,document,'script','dataLayer','GTM-PXCWVZ');</script>
 	<!-- End Google Tag Manager -->
 	<section id="welcome">
-		<!-- <header class="close">
-		<nav>
-		<div class="relative">
-		<div class="holder">
-		<a href="#welcome">Home</a>
-		<a href="#about">About Me</a>
-		<a href="#portfolio">Testionials</a>
-		<a href="#resume">Portfolio</a>
-		<a href="#contactMe">Contact Me</a>
+		<header class="close">
+		<nav role='navigation' id="mainnav">
+		<!-- <div class="relative">
+		<div class="holder"> -->
+			<ul>
+				<li><a href="#welcome">Home</a></li>
+				<li><a href="#about">About Me</a></li>
+				<li><a href="#portfolio">Testionials</a></li>
+				<li><a href="#resume">Portfolio</a></li>
+				<li><a href="#contactMe">Contact Me</a></li>
+			</ul>
+		</div>
 	</div>
-</div>
 </nav>
-<div class="nav-bar">
+<div class="hamb">
+  <a href="#"><i class="fa fa-bars"></i></a>
+</div>
+<canvas id="bubble">
+<!-- <div class="nav-bar">
 <div class="toggle-bar">
 </div>
-</div>
-</header> -->
+</div> -->
+</header>
 <div class="welcome">
 	<i class="logo fade-in one"></i>
 	<h1 class="fade-in two">Hello <strong>World</strong></h1>
@@ -633,6 +640,7 @@
 			<div class="copy">© Copyright 2016 Farishta Haider</div>
 		</div>
 	</section>
+	</canvas>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<!-- <script src="http://tympanus.net/codrops/adpacks/demoad.js"></script> -->
 	<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
