--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 	<section id="welcome">
 		<header class="close">
 		<nav role='navigation' id="mainnav">
-		<!-- <div class="relative">
-		<div class="holder"> -->
+		<div class="relative">
+		<div class="holder">
 			<ul>
 				<li><a href="#welcome">Home</a></li>
 				<li><a href="#about">About Me</a></li>
@@ -62,10 +62,6 @@
   <a href="#"><i class="fa fa-bars"></i></a>
 </div>
 <canvas id="bubble">
-<!-- <div class="nav-bar">
-<div class="toggle-bar">
-</div>
-</div> -->
 </header>
 <div class="welcome">
 	<i class="logo fade-in one"></i>
